# terraform-plan-formatter

./: .gitignore  APKBUILD  Cargo.toml  LICENSE  Makefile  PKGBUILD  README.md  install.ps1  install.sh  tfplan.nuspec
.github/workflows/: ci.yml  release.yml
Formula/: tfplan.rb
docs/: PUBLISHING.md
snap/: snapcraft.yaml
src/: lib.rs  main.rs
tools/: chocolateyinstall.ps1
